fix/container, position, size e z-index (header, main e footer)

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,13 @@
 
 /* GENERAL */
 
-.container {
+/* .container {
     padding: 10px 15px;
+} */
+
+.container {
+    /* margin: 0 auto; */
+    padding: 15px 0;
 }
 
 .column25 {
@@ -27,16 +32,18 @@
 header {
     background-color: #000000;
     color: white;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     height: 50px;
-    top: 0;
-    left: 0;
+    z-index: 1;
+    /* top: 0;
+    left: 0; */
 }
 
 header .buttons-header {
     display: flex;
     justify-content: right;
+    margin-right: 15px;
 }
 
 header .icon {
@@ -56,14 +63,13 @@ header .icon>* {
 /* MAIN */
 
 main {
-    padding-top: 50px;
+    width: 100%;
+    height: calc(100vh - 105px);
+    overflow: auto;
     background-color: black;
 }
 
 main .window {
-    width: 100vw;
-    height: calc(100vh - 55px);
-    overflow: auto;
 
     /* background-color: red; creato solo per debug*/
 }
@@ -111,12 +117,12 @@ main .row {
 footer {
     background-color: #222222;
     color: white;
-    position: fixed;
     width: 100%;
     height: 55px;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
+    /* position: fixed; */
+    /* z-index: 1; */
+    /* bottom: 0;
+    left: 0; */
 }
 
 /* footer left */
@@ -137,6 +143,10 @@ footer section div {
 footer .icon-container i {
     font-size: 1.2rem;
     margin-bottom: 5px;
+}
+
+footer .icon-container:nth-child(4) i {
+    color: #4BC800;
 }
 
 footer section:first-child div:nth-child(even) {
@@ -166,4 +176,6 @@ footer section:last-child {
 footer section:last-child div {
     color: red;
     background-color: #4A4A4A;
+    height: 100%;
+    padding: 0 10px;
 }
